# cmakepp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.md.in  _coverpage.md  _navbar.md  _navbar.md.in  appveyor.yml  bootstrap_cmakepp.cmake  cmake-format.py  cmakepp.cmake  index.html  install-powershell.ps1  install.cmake  package.cmake
.github/workflows/: main.yml
cmake/: README.md  README.md.in
cmake/checksum/: README.md  README.md.in
cmake/cmakepp/: cmakepp_compile.cmake
cmake/collections/: README.md  README.md.in
cmake/events/: README.md
cmake/expr/: README.md  README.md.in  arguments_expression_eval_cached.cmake  arguments_expression_parse_cached.cmake
cmake/filesystem/: fwrite_temp.cmake
cmake/function/: README.md  README.md.in  arguments_cmake_code.cmake  function_string_get.cmake
cmake/log/: README.md  README.md.in
cmake/map/: README.md  README.md.in
cmake/navigation/: README.md  README.md.in  navigation_expression_parse.cmake  ref_nav_get.cmake
cmake/process/: README.md  README.md.in  execute.cmake
cmake/quickmap/: README.md  README.md.in
cmake/ref/: README.md.in
cmake/shell/: shell.cmake
cmake/string/: README.md  README.md.in
cmake/templating/: README.md  README.md.in  template_compile.cmake  template_execute.cmake  template_run_file.cmake
cmake/uri/: README.md  README.md.in
samples/: README.md  README.md.in
source/: README.md  eval_predicate.cmake  eval_predicate_cmake.cmake  value.cmake
source/ast/: ast.cmake  ast_eval.cmake  ast_eval_assignment.cmake  ast_eval_identifier.cmake  ast_eval_literal.cmake  ast_parse.cmake  ast_parse_any.cmake  ast_parse_empty.cmake  ast_parse_end_of_stream.cmake  ast_parse_list.cmake  ast_parse_match.cmake  ast_parse_regex.cmake  ast_parse_sequence.cmake  ast_parse_token.cmake  evaluate.cmake  expr_compile.cmake  expr_import.cmake  lang.cmake  lang2.cmake  language.cmake  language_initialize.cmake  language_load.cmake  make_symbol.cmake  script.cmake  token_definitions.cmake  token_new.cmake  token_stream_commit.cmake  token_stream_isempty.cmake  token_stream_move_next.cmake  token_stream_new.cmake  token_stream_pop.cmake  token_stream_push.cmake  token_stream_take.cmake  tokens_parse.cmake
source/cache/: cache_clear.cmake  cache_exists.cmake  cache_get.cmake  cache_return_hit.cmake  cache_update.cmake  dir_cache.cmake  file_cache_clear.cmake  file_cache_clear_all.cmake  file_cache_exists.cmake  file_cache_get.cmake  file_cache_key.cmake  file_cache_return_hit.cmake  file_cache_update.cmake  memory_cache_clear.cmake  memory_cache_exists.cmake  memory_cache_get.cmake  memory_cache_key.cmake  memory_cache_return_hit.cmake  memory_cache_update.cmake  string_cache_get.cmake  string_cache_hit.cmake  string_cache_location.cmake  string_cache_return_hit.cmake  string_cache_update.cmake
source/checksum/: README.md  checksum_dir.cmake  checksum_file.cmake  checksum_files.cmake  checksum_glob_ignore.cmake  checksum_layout.cmake  checksum_object.cmake  checksum_string.cmake  content_dir_check.cmake  content_dir_update.cmake
source/classes/: Object.cmake
source/cmake/: cmake_arguments_quote_if_necessary.cmake  is_cmake_function.cmake
source/cmakepp/: cmakepp.cmake  cmakepp_cli.cmake  cmakepp_compile.cmake  cmakepp_compile_docs.cmake  cmakepp_project_cli.cmake  cmakepp_require.cmake  cmakepp_setup_environment.cmake  cmakepp_tool.cmake
source/collections/: README.md  index_range.cmake  list_after.cmake  list_all.cmake  list_any.cmake  list_append.cmake  list_at.cmake  list_before.cmake  list_check_items.cmake  list_combinations.cmake  list_contains.cmake  list_contains_any.cmake  list_count.cmake  list_equal.cmake  list_erase.cmake  list_erase_slice.cmake  list_except.cmake  list_extract.cmake  list_extract_any_flag.cmake  list_extract_any_labelled_value.cmake  list_extract_flag.cmake  list_extract_flag_name.cmake  list_extract_flags.cmake  list_extract_labelled_keyvalue.cmake  list_extract_labelled_value.cmake  list_extract_matches.cmake  list_find.cmake  list_find_any.cmake  list_find_flags.cmake  list_fold.cmake  list_get.cmake  list_get_labelled_value.cmake  list_get_lean.cmake  list_intersect.cmake  list_intersect_args.cmake  list_isempty.cmake  list_isinorder.cmake  list_iterator.cmake  list_iterator_break.cmake  list_iterator_next.cmake  (+35 more)
source/conan/: README.md.in  conan_install.cmake
source/config/: config_function.cmake  config_setup.cmake
source/core/: beep.cmake  cache.cmake  cmake_entry_point.cmake  commandline_arg_string.cmake  commandline_args_get.cmake  commandline_extract.cmake  commandline_get.cmake  commandline_string.cmake  dbg.cmake  dec2hex.cmake  define_cache_function.cmake  echo_append_indent.cmake  echo_append_padded.cmake  eval.cmake  eval_cmake.cmake  eval_math.cmake  eval_ref.cmake  eval_truth.cmake  eval_unique.cmake  global_config.cmake  graphsearch.cmake  hex2dec.cmake  icmake.cmake  identifier.cmake  include_glob.cmake  include_once.cmake  is_script_mode.cmake  lazy_cmake.cmake  make_guid.cmake  math_max.cmake  math_min.cmake  message.cmake  message_indent.cmake  message_indent_get.cmake  message_indent_level.cmake  message_indent_level_pop.cmake  message_indent_level_push.cmake  os.cmake  parse_command_line.cmake  pkg.cmake  (+28 more)
source/cpp/: cpp_class_generate.cmake  cpp_class_header_generate.cmake
source/datetime/: datetime.cmake  millis.cmake
source/debugging/: breakpoint.cmake  performance_sample.cmake  print_call_counts.cmake  print_commands.cmake  (+7 more)
tests/: cmakelists_open_close_test.cmake  cmakelists_target_update_test.cmake  command_line_handler_test.cmake  compile_cmakepp_test.cmake  content_dir_check.cmake  create_cpp_class_test.cmake  encoded_list_test.cmake  eval_predicate_test.cmake  eval_tests.cmake  expr_test.cmake  expr_test2.cmake  file_queue_test.cmake  handler_tests.cmake  navigation_expression_parse_test.cmake  qm_serialize_deserialize_test.cmake  query_input_test.cmake  quickmap_test.cmake  task_invoke_later_test.cmake  unsafe_file_operation_test.cmake  value_descriptor_parse_tests.cmake  value_test.cmake
tools/: reformat.cmake
(+1562 files in other folders)
